MV 14.2.0 - Beschleunigte Verarbeitung von Lucene mittels native access aktiviert