@@ -48,5 +48,23 @@ else
 fi
 
 
+#
+# https://stackoverflow.com/questions/65819206/hosting-javafx-project-on-docker-container
+if [ "${ENABLE_LUCENE:-0}" -eq 1 ]; then
+
+    if ! grep -q "\--enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.vector" "/opt/MediathekView/MediathekView.vmoptions"; then
+
+        cat <<EOF >> /opt/MediathekView/MediathekView.vmoptions
+#
+# Beschleunigte Verarbeitung von Lucene mittels native access aktiviert
+--enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.vector
+EOF
+    fi
+
+else
+    sed -e '/\# Beschleunigte Verarbeitung von Lucene mittels native access aktiviert/d' -i /opt/MediathekView/MediathekView.vmoptions
+    sed -e '/\--enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.vector/d' -i /opt/MediathekView/MediathekView.vmoptions
+fi
+
 # Disable automatic update for Mediathekview
 echo "127.0.0.1       download.mediathekview.de" >> /etc/hosts
